Update README.md
Melhorias no readme, e adição de um dropdown para acesso ao documento em inglês.